@@ -12,6 +12,7 @@ Post-v2.15.0
    - DPDK:
      * OVS validated with DPDK 20.11.1. It is recommended to use this version
        until further releases.
+   - New configure option '--enable-asan' enables AddressSanitizer.
 
 
 v2.15.0 - 15 Feb 2021
